objects/vlocity_cmt__Interface_ProductAttribute__c.object
<CustomObject>
    <description>Interface Object: Used to stage inbound product attribute data for import into Vlocity Attributes and product Attribute Assignments.</description>
    <fields>
        <fullName>vlocity_cmt__AttributeCode__c</fullName>
        <label>Attribute Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AttributeDisplaySequence__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Attribute Display Sequence</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AttributeFilterable__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Whether this attribute should be displayed in Filter section</description>
        <label>AttributeFilterable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AttributeName__c</fullName>
        <label>Attribute Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CategoryApplicableSubType__c</fullName>
        <label>Category Applicable Sub Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CategoryApplicableTypes__c</fullName>
        <description>Object types to which this category applies</description>
        <label>Category Applicable Types</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CategoryCode__c</fullName>
        <label>Category Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CategoryDescription__c</fullName>
        <label>Category Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CategoryDisplayFilter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Category Filterable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CategoryDisplaySequence__c</fullName>
        <description>Display sequence of this category</description>
        <label>Category Display Sequence</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CategoryName__c</fullName>
        <label>Category Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DRBundleName__c</fullName>
        <label>DRBundleName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DRError__c</fullName>
        <label>DR Error</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DRProgressData__c</fullName>
        <label>DR Progress</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DRStatus__c</fullName>
        <label>DR Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProductApprovedOn__c</fullName>
        <label>Product Approved On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProductAttributeObjectType__c</fullName>
        <description>Type of Object being assigned to this Attribute</description>
        <label>Product Attribute Object Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProductAttributeValueDataType__c</fullName>
        <label>Product Attribute Value Data Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProductAttributeValueDescription__c</fullName>
        <label>Product Attribute Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProductAttributeValue__c</fullName>
        <label>Product Attribute Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProductCode__c</fullName>
        <label>Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProductEffectiveDate__c</fullName>
        <label>Product Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProductEndDate__c</fullName>
        <label>Product End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProductStatus__c</fullName>
        <label>Product Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProductSubType__c</fullName>
        <label>Product Sub Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProductType__c</fullName>
        <label>Product Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Product Attribute Interface</label>
    <listViews>
        <fullName>vlocity_cmt__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Attribute Interface</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>